--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -451,7 +451,7 @@ document.addEventListener("DOMContentLoaded", function () {
             },
         });
 
-        doc.save("Manage_Course_List.pdf");
+        doc.save("Admin_ViewCourseList.pdf");
     });
 });
 </script>
