--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -337,7 +337,7 @@ document.addEventListener("DOMContentLoaded", function () {
             },
         });
 
-        doc.save("Manage_Department_List.pdf");
+        doc.save("Admin_ViewDepartmentList.pdf");
     });
 });
 </script>
