--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -259,7 +259,7 @@ document.getElementById("generatePDF").addEventListener("click", function () {
             doc.text(`Page ${pageCount}`, pageWidth - margin, pageHeight - 10, { align: "right" });
         }
     });
-    doc.save("Invigilation_Report.pdf");
+    doc.save("Admin_ViewInvigilationReport.pdf");
 });
 </script>
 {% endblock %}
