--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -136,7 +136,7 @@ document.getElementById("generatePDF").addEventListener("click", async () => {
         y += totalBlockHeight + 5;
     }
 
-    doc.save("Invigilation_Timetable.pdf");
+    doc.save("Admin_ViewInvigilationTimetable.pdf");
 });
 </script>
 {% endblock %}
