--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -482,7 +482,7 @@ document.addEventListener("DOMContentLoaded", function () {
         });
 
         // ===== Save PDF =====
-        doc.save("Manage_Staff_List.pdf");
+        doc.save("Admin_Staff_List.pdf");
     });
 });
 
