--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -266,7 +266,7 @@ document.getElementById("generatePDF").addEventListener("click", function () {
         }
     });
 
-    doc.save("Venue_List.pdf");
+    doc.save("Admin_ViewVenueList.pdf");
 });
 
 
