--- a/app/templates/user/userInvigilationTimetable.html
+++ b/app/templates/user/userInvigilationTimetable.html
@@ -3,7 +3,9 @@
 {% block head_title %}<h2>Invigilation Timetable</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <button id="generatePDF" style="background-color: black;">Download PDF</button>
+    <div>
+        <button id="generatePDF" style="background-color: black;">Download PDF</button>
+    </div>
 
     <div style="display: flex; gap: 15px; align-items: center;">
         <h4>Exam Status:</h4>
