--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -442,7 +442,7 @@ document.addEventListener("DOMContentLoaded", function () {
         });
 
         // ===== Save =====
-        doc.save("Manage_Exam_List.pdf");
+        doc.save("Admin_ViewExamList.pdf");
     });
 });
 </script>
