--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -3,7 +3,7 @@
 {% block head_title %}<h2>Invigilation Report</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <div class="button-wrapper">
+    <div class="button-wrapper" style="display: block;">
         <button id="generatePDF" style="background-color: black;">Download PDF</button>
     </div>
     <div class="dashboard-row">
