--- a/app/templates/user/userInvigilationTimetable.html
+++ b/app/templates/user/userInvigilationTimetable.html
@@ -3,7 +3,7 @@
 {% block head_title %}<h2>Invigilation Timetable</h2>{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <div>
+    <div class="button-wrapper" style="display: block;">
         <button id="generatePDF" style="background-color: black;">Download PDF</button>
     </div>
 
